# Backend/src/api/metadatos.py
@@ -1,0 +1,57 @@
+from flasgger import swag_from
+from flask import Blueprint, request
+
+from .. import config
+from ..models.dataset import Dataset
+from ..utils.response import Responses
+
+metadatos_api: Blueprint = Blueprint("Metadatos", __name__, url_prefix="/metadatos")
+
+__swagger: dict = config.API_MODELS.get("metadatos", {})
+
+
+@metadatos_api.get("/<string:table_name>")
+@swag_from(__swagger.get("get_metadatos", {}))
+def get_metadatos(table_name: str, response: Responses = Responses()) -> Responses:
+    meta = Dataset()
+    if meta.filter(table_name=table_name) is None:
+        return response.error(
+            message="No existe el registro actual de Costos de Construccion",
+            status_code=404,
+        )
+    return response.success(data=meta.current.to_dict())
+
+@metadatos_api.post("/<string:table_name>")
+@swag_from(__swagger.get("post_metadatos", {}))
+def post_metadatos(table_name: str, response: Responses = Responses()) -> Responses:
+    meta = Dataset()
+    if meta.filter(table_name=table_name) is not None:
+        return response.error(
+            message="Ya existe un registro para esa tabla",
+            status_code=404,
+        )
+    data:request = request.json
+    if meta.create(**data) is None:
+        return response.error(
+            message="No se pudo crear el registro",
+            status_code=409,
+        )
+    return response.success(data=meta.current.to_dict())
+
+@metadatos_api.patch("/<string:table_name>")
+@swag_from(__swagger.get("patch_metadatos", {}))
+def patch_metadatos(table_name: str, response: Responses = Responses()) -> Responses:
+    meta = Dataset()
+    if meta.filter(table_name=table_name) is None:
+        return response.error(
+            message="No existe el registro actual de Costos de Construccion",
+            status_code=404,
+        )
+    data:request = request.json
+    if meta.update(**data) is None:
+        return response.error(
+            message="No se pudo actualizar el registro",
+            status_code=409,
+        )
+    return response.success(data=meta.current.to_dict())
+
